tests/baselines/reference/enumAssignmentCompat2.errors.txt
tests/cases/compiler/enumAssignmentCompat2.ts(25,5): error TS2322: Type 'typeof W' is not assignable to type 'number'.
tests/cases/compiler/enumAssignmentCompat2.ts(27,5): error TS2322: Type 'W.a' is not assignable to type 'typeof W'.
tests/cases/compiler/enumAssignmentCompat2.ts(29,5): error TS2322: Type '3' is not assignable to type 'typeof W'.
tests/cases/compiler/enumAssignmentCompat2.ts(31,5): error TS2322: Type 'W.a' is not assignable to type 'WStatic'.
tests/cases/compiler/enumAssignmentCompat2.ts(32,5): error TS2322: Type '5' is not assignable to type 'WStatic'.


==== tests/cases/compiler/enumAssignmentCompat2.ts (5 errors) ====
    enum W {
    
        a, b, c,
    
    }
    
    module W {
        export class D { }
    }
    
    interface WStatic {
    
        a: W;
    
        b: W;
    
        c: W;
    
    }
    
    
    
    var x: WStatic = W;
    var y: typeof W = W;
    var z: number = W; // error
        ~
!!! error TS2322: Type 'typeof {|W|0|}' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/enumAssignmentCompat2.ts:1:6
    var a: number = W.a;
    var b: typeof W = W.a; // error
        ~
!!! error TS2322: Type '{|W|0|}.a' is not assignable to type 'typeof {|W|1|}'.
!!! annotated symbol 0 tests/cases/compiler/enumAssignmentCompat2.ts:1:6
!!! annotated symbol 1 tests/cases/compiler/enumAssignmentCompat2.ts:1:6
    var c: typeof W.a = W.a;
    var d: typeof W = 3; // error
        ~
!!! error TS2322: Type '3' is not assignable to type 'typeof {|W|0|}'.
!!! annotated symbol 0 tests/cases/compiler/enumAssignmentCompat2.ts:1:6
    var e: typeof W.a = 4;
    var f: WStatic = W.a; // error
        ~
!!! error TS2322: Type '{|W|0|}.a' is not assignable to type '{|WStatic|1|}'.
!!! annotated symbol 0 tests/cases/compiler/enumAssignmentCompat2.ts:1:6
!!! annotated symbol 1 tests/cases/compiler/enumAssignmentCompat2.ts:11:11
    var g: WStatic = 5; // error
        ~
!!! error TS2322: Type '5' is not assignable to type '{|WStatic|0|}'.
!!! annotated symbol 0 tests/cases/compiler/enumAssignmentCompat2.ts:11:11
    var h: W = 3;
    var i: W = W.a;
    i = W.a;
    W.D;
    var p: W.D;